fix: a bunch of compilation errors and failing tests